error fixed: hiding start button on smaller screens

--- a/TETRIS/style.css
+++ b/TETRIS/style.css
@@ -74,7 +74,6 @@ p{
 
 @media (max-width: 640px) {
     .header{
-        display: none;
     }
     
     body {
